--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "handlebars": "^4.7.6",
     "image-downloader": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.8.11",
+    "mongoose-float": "^1.0.4",
     "morgan": "~1.9.1",
     "node-gcm": "^1.0.2",
     "nodemailer": "^6.4.2",
